Home Work ViewController Delegate

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ HomeUserDefaults/HomeUserDefaults.xcodeproj/
 HomeWorkDelegate/HomeWorkDelegate.xcodeproj/
 
 HomeWorkDelegateLegacy/HomeWorkDelegateLegacy.xcodeproj/
+
+LessonViewController/
+
+HomeWorkDelegate/.DS_Store
+
+.DS_Store
