--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ LessonViewController/
 HomeWorkDelegate/.DS_Store
 
 .DS_Store
+HomeWork/.DS_Store
+HomeWorkDownloadPicture/HomeWorkDownloadPicture.xcodeproj
