--- a/HWImageFilter/HWImageFilter.xcodeproj/xcshareddata/xcschemes/HWImageFilter.xcscheme
+++ b/HWImageFilter/HWImageFilter.xcodeproj/xcshareddata/xcschemes/HWImageFilter.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00C9EEAF23853C2A00962989"
-               BuildableName = "HWCoreData.app"
-               BlueprintName = "HWCoreData"
-               ReferencedContainer = "container:HWCoreData.xcodeproj">
+               BlueprintIdentifier = "00E159DC238BA2B4008D6590"
+               BuildableName = "HWImageFilter.app"
+               BlueprintName = "HWImageFilter"
+               ReferencedContainer = "container:HWImageFilter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "00C9EEAF23853C2A00962989"
-            BuildableName = "HWCoreData.app"
-            BlueprintName = "HWCoreData"
-            ReferencedContainer = "container:HWCoreData.xcodeproj">
+            BlueprintIdentifier = "00E159DC238BA2B4008D6590"
+            BuildableName = "HWImageFilter.app"
+            BlueprintName = "HWImageFilter"
+            ReferencedContainer = "container:HWImageFilter.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -55,10 +55,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "00C9EEAF23853C2A00962989"
-            BuildableName = "HWCoreData.app"
-            BlueprintName = "HWCoreData"
-            ReferencedContainer = "container:HWCoreData.xcodeproj">
+            BlueprintIdentifier = "00E159DC238BA2B4008D6590"
+            BuildableName = "HWImageFilter.app"
+            BlueprintName = "HWImageFilter"
+            ReferencedContainer = "container:HWImageFilter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <EnvironmentVariables>
@@ -81,10 +81,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "00C9EEAF23853C2A00962989"
-            BuildableName = "HWCoreData.app"
-            BlueprintName = "HWCoreData"
-            ReferencedContainer = "container:HWCoreData.xcodeproj">
+            BlueprintIdentifier = "00E159DC238BA2B4008D6590"
+            BuildableName = "HWImageFilter.app"
+            BlueprintName = "HWImageFilter"
+            ReferencedContainer = "container:HWImageFilter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
