[HWImageFilter] - один фильтр в главном потоке

--- a/HWImageFilter/HWImageFilter.xcodeproj/xcshareddata/xcschemes/HWImageFilter.xcscheme
+++ b/HWImageFilter/HWImageFilter.xcodeproj/xcshareddata/xcschemes/HWImageFilter.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "00E15A0B238BC833008D6590"
+               BuildableName = "HWImageFilterTests.xctest"
+               BlueprintName = "HWImageFilterTests"
+               ReferencedContainer = "container:HWImageFilter.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
