--- a/DiplomMovieDB/DiplomMovieDB.xcodeproj/xcshareddata/xcschemes/DiplomMovieDB.xcscheme
+++ b/DiplomMovieDB/DiplomMovieDB.xcodeproj/xcshareddata/xcschemes/DiplomMovieDB.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0030EF79238E44CD00224006"
+            BuildableName = "DiplomMovieDB.app"
+            BlueprintName = "DiplomMovieDB"
+            ReferencedContainer = "container:DiplomMovieDB.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
